# xpudpc

./: Cargo.toml  Readme.md
doc/: exchanging-data-with-xplane.md  standalone-udp.md
examples/: com1.rs  position-beacon.rs  position.rs
src/: beacon.rs  client.rs  error.rs  lib.rs  response.rs
src/codec/: mod.rs  reader.rs  writer.rs
src/types/: beacon.rs  data.rs  dataref.rs  mod.rs  placement.rs  pose.rs  position.rs  radar.rs  situation.rs
