[package]
name = "xpudpc"
version = "0.1.0"
description = "Async Rust client for X-Plane's built-in UDP protocol (no plugin required)"
authors = ["Frédérik Bilhaut <frederik.bilhaut@gmail.com>"]
license = "Apache-2.0"
readme = "./Readme.md"
keywords = ["xplane", "udp", "client"]
homepage = "https://github.com/fbilhaut/xpudpc"
repository = "https://github.com/fbilhaut/xpudpc"
documentation = "https://docs.rs/xpudpc/"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "macros"] }
socket2 = { version = "0.5", features = ["all"] }
